put 404 text into paragraph

--- a/404.md
+++ b/404.md
@@ -26,6 +26,6 @@ img {
 
 <body>
 <div class="intro preview clearfix">
-	Hmmm ... probably not what you were looking for. Try going <a href="#" onClick="history.go(-2);return true;">back</a> or move to the <a href="/index.html">homepage</a>.
+	<p>Hmmm ... probably not what you were looking for. Try going <a href="#" onClick="history.go(-2);return true;">back</a> or move to the <a href="/index.html">homepage</a>.</p>
 </div>
 </body>
