--- a/_posts/2019-06-16-coc.md
+++ b/_posts/2019-06-16-coc.md
@@ -3,7 +3,7 @@ layout: post
 title: "Philosophy desperately needs event codes of conduct"
 categories: 
 - Philosophy
-- Organizing
+- Organising
 hero: https://live.staticflickr.com/65535/32808143587_2dc1c07da2_o.jpg
 description: "Codes of conduct offer an easy way to help organisers avoid foul-ups by hosting transphobes, alt-right celebrities or serial harassers. Recent events in philosophy bring out that, yes, also the dryer echelons of the academy could use a code of conduct."
 ---
@@ -27,15 +27,15 @@ Consider this slightly more wordy sample [Conference Code of Conduct](https://co
 
 Why is having a code of conduct relevant? Shouldn’t it be obvious harassment and discrimination have no place at academic events? Well, in theory, yes. In reality, not so much. 
 
-Having a code of conduct matters, not least because of what it communicates. As the [Geek Feminism Wiki notes](https://geekfeminism.wikia.org/wiki/Conference_anti-harassment/Policy) when introducing its example conference anti-harassment policy: "... it sets expectations for behavior at the conference. Simply having an anti-harassment policy can prevent harassment all by itself". Explicating your code of conduct publicly sets a *norm* for behaviour for attendees, speakers, sponsors, or anyone somehow involved in the event. Further, importantly, a code of conduct gives organisers something concrete to act upon. Which brings me to the next point.
+Having a code of conduct matters, not least because of what it communicates. As the [Geek Feminism Wiki notes](https://geekfeminism.wikia.org/wiki/Conference_anti-harassment/Policy) when introducing its example conference anti-harassment policy: "... it sets expectations for behaviour at the conference. Simply having an anti-harassment policy can prevent harassment all by itself". Explicating your code of conduct publicly sets a *norm* for behaviour for attendees, speakers, sponsors, or anyone somehow involved in the event. Further, importantly, a code of conduct gives organisers something concrete to act upon. Which brings me to the next point.
 
 ### 2. Enforce your event code of conduct 
 
-Your conference code of conduct should be enforceable and enforced. Otherwise it’s just an empty gesture. To be enforcable, your code of conduct must contain concrete steps for reporting violations, and detail what actions conference staff may take in response. 
+Your conference code of conduct should be enforceable and enforced. Otherwise it’s just an empty gesture. To be enforceable, your code of conduct must contain concrete steps for reporting violations, and detail what actions conference staff may take in response. 
 
 One of the signals I got from the Aristotelian Society was that they, as organisers, were supposedly powerless to 'police' or take action in response to anything a speaker might say or do. That's ... surprising. Because organisers aren’t powerless, are they? For one, as an organiser _you_ decide who gets invited. (Remember, academic speaking slots are scarce. No specific individual has an automatic right to be invited, nor do organisers have an automatic obligation to invite or host any particular person. There was never the presumption that everyone would get a talking slot. Being offered a particular platform to speak is the exception, not the rule.) 
 
-Further, if you're organising something, it’s _your_ meeting. You get to set the basic standards for acceptable behaviour. If a speaker or attendee violates those, then maybe they shouldn't be there? Had the Aristotelian Society had a code of conduct in hand which explicitly condemns harrassment based on gender identity and expression, then a talk that was nothing but a long-winded exercise in that type of harassment should not have gone through. Perhaps you're pondering: But how could they have known in advance? Read on.
+Further, if you're organising something, it’s _your_ meeting. You get to set the basic standards for acceptable behaviour. If a speaker or attendee violates those, then maybe they shouldn't be there? Had the Aristotelian Society had a code of conduct in hand which explicitly condemns harassment based on gender identity and expression, then a talk that was nothing but a long-winded exercise in that type of harassment should not have gone through. Perhaps you're pondering: But how could they have known in advance? Read on.
 
 Yes, measures may include removing the offender from the event. Even if the offender is the speaker. Here's Geek Feminism again:
 
@@ -47,15 +47,15 @@ How, you ask, can organisers recognise whether certain behaviour is racist, sexi
 In the spirit of this declaration of purpose the Aristotelian Society wishes to express its support for Prof Kathleen Stock's right to engage in philosophical debate and writing without harassment. The Society remains neutral on the philosophical debates in which she is engaged. We very much look forward to hearing her paper on June 3rd.")
 *The Aristotelian Society's statement of support*
 
-Luckily, there's an easy remedy! If you, as an organiser, have trouble recognising racism, sexism, homophobia, transphobia, ableism, fatphobia or other forms of discrimination, the point is to *listen* to people who are members of the community that is at risk of facing the harassment. They’re likely to be much better informed than anyone not belonging to that community to make assessments on the matter. If trans people flag up transphobia, [take it seriously](https://medium.com/@lilymadigan/believe-trans-people-when-they-call-out-transphobia-d37a5e86dc2d). Act on it. Here’s how Open Source Design put it as part of in their ['Be excellent to each other' code of conduct](https://opensourcedesign.net/code-of-conduct/):
+Luckily, there's an easy remedy! If you, as an organiser, have trouble recognising racism, sexism, homophobia, transphobia, ableism, fatphobia or other forms of discrimination, the point is to *listen* to people who are members of the community that is at risk of facing the harassment. They’re likely to be much better informed than anyone not belonging to that community to make assessments on the matter. If trans people flag up transphobia, [take it seriously](https://medium.com/@lilymadigan/believe-trans-people-when-they-call-out-transphobia-d37a5e86dc2d). Act on it. Here’s how Open Source Design put it as part of their ['Be excellent to each other' code of conduct](https://opensourcedesign.net/code-of-conduct/):
 
 > “If you think you are offending someone for whatever reason, STOP immediately. If you’re uncertain, ask a core community member (in private message). Asking for guidance will show good faith that you are striving to uphold our code of conduct.”
 
-The Aristotelian Society missed a golden opportunity here. Because not only do they standardly require speakers to pre-circulate their text (providing ample time for scrunity), they also received [multiple](https://twitter.com/christapeterso/status/1121235302377377792) [notifications](https://twitter.com/chrismeyns/status/1134535673749397504) flagging that their planned speaker was a serial harasser. You can do better. Enforce your code of conduct.
+The Aristotelian Society missed a golden opportunity here. Because not only do they standardly require speakers to pre-circulate their text (providing ample time for scrutiny), they also received [multiple](https://twitter.com/christapeterso/status/1121235302377377792) [notifications](https://twitter.com/chrismeyns/status/1134535673749397504) flagging that their planned speaker was a serial harasser. You can do better. Enforce your code of conduct.
 
 ### 3. Acknowledge mistakes, do better
 
-What if you were too late? The event was large, things happened so quickly, and you realise you inadvertedly did end up facilitating harassment. Now what? Perhaps surprisingly, it's actually not that difficult:
+What if you were too late? The event was large, things happened so quickly, and you realise you inadvertently did end up facilitating harassment. Now what? Perhaps surprisingly, it's actually not that difficult:
 
 1. Acknowledge that something went wrong
 2. Say why the behaviour is problematic and violates your code of conduct
@@ -63,7 +63,7 @@ What if you were too late? The event was large, things happened so quickly, and 
 
 <span></span>
 
-As an example of this, PyCon, the annual convention for Python enthusiasts, recently released a [Tranparency Report](https://2018.pyconuk.org/code-conduct/transparency-report/) for their 2018 conference. They state: 
+As an example of this, PyCon, the annual convention for Python enthusiasts, recently released a [Transparency Report](https://2018.pyconuk.org/code-conduct/transparency-report/) for their 2018 conference. They state: 
 
 > “A Code of Conduct is only useful if it’s followed and enforced. To show that we take it seriously, we’ve prepared a list of Code of Conduct reports we received during the event, and how we responded. These reports are all anonymised.”
 
